--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,6 +1,8 @@
 // Import Fonts
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,500&display=swap');
 @import url('bootstrap/dist/css/bootstrap.css');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+
 
 
 body {
